@@ -1,10 +1,10 @@
 {% extends "site.html" %}
-
-{% load uniform %}
+{% load uni_form_tags %}
 
 {% block extraheader %}
-    {% uniform_header %}
+{% include "form_includes.html" %}
 {% endblock %}
+
 
 {% block breadcrumbs %}
 <li><a href="{% url eventregistration_view_all %}">arrangementer</a>&nbsp;&gt;&nbsp;</li>
@@ -17,9 +17,9 @@
 
 <p>Når du tilmelder dig dette arrangement vil dit navn og brugernavn blive vist <b>offentligt</b> i en liste over deltagere.</p>
 
-{% uniform_begin form %}
+<form method="POST" action="">
 
-{{form|uniform_add}}
+{{form|as_uni_form}}
 
 {% if event.has_options %}
 <h2>Tilvalg</h2>
@@ -29,7 +29,10 @@
 
 {{ signup_parts|safe }}
 
-{% uniform_submit "tilmeld" %}
-{% uniform_end %}
+<div class="buttonHolder">
+	<input type="submit" name="Tilmeld" value="Tilmeld" />
+</div>
+
+</form>
 
 {% endblock %}
