@@ -1,21 +1,0 @@
-{% extends "site.html" %}
-
-{% load uniform %}
-
-{% block extraheader %}
-    {% uniform_header %}
-{% endblock %}
-
-{% block breadcrumbs %}
-<li><a href="{% url members_profile %}">profil</a>&nbsp;&gt;&nbsp;</li>
-<li><a href="{% url members_change_email %}">skift email</a></li>
-{% endblock %}
-
-{% block contenthead %}Skift email{% endblock %}
-
-{% block content %}
-    <p>Vi vil sende en bekræftigelse, til din nye email, med en side du skal besøge før din email bliver opdateret i vores database.</p>
-
-    {{ form|uniform:"skift email" }}
-
-{% endblock %}
