@@ -1,29 +1,0 @@
-{% extends "site.html" %}
-
-{% block breadcrumbs %}
-
-{% if  user.is_authenticated %}
-    <li><a href="{% url members_profile %}">profil</a>&nbsp;&gt;&nbsp;</li>
-{% else %}
-    <li><span>profil</span>&nbsp;&gt;&nbsp;</li>
-{% endif %}
-
-{% if success %}
-    <li><span>email skiftet</span></li>
-{% else %}
-    <li><span>email kunne ikke skiftes</span></li>
-{% endif %}
-
-{% endblock %}
-
-{% block contenthead %}Skift email{% endblock %}
-
-{% block content %}
-
-{% if success %}
-<p>Din email er blevet skiftet</p>
-{% else %}
-<p>Din email kunne ikke skiftes, confirm-key kunne ikke findes i databasen. Dette skyldes enten en forkert formateret URL eller at tidsfristen for at confirm er udløbet.</p>
-{% endif %}
-
-{% endblock %}
