@@ -1,9 +1,8 @@
 {% extends "site.html" %}
-
-{% load uniform %}
+{% load uni_form_tags %}
 
 {% block extraheader %}
-    {% uniform_header %}
+{% include "form_includes.html" %}
 {% endblock %}
 
 {% block breadcrumbs %}
@@ -15,6 +14,8 @@
 
 {% block content %}
 
-{{ form|uniform:"Ændre kodeord" }}
+{% with form.helper as helper %}
+    {% uni_form form helper %}
+{% endwith %}
 
 {% endblock %}
