@@ -1,9 +1,8 @@
 {% extends "site.html" %}
-
-{% load uniform %}
+{% load uni_form_tags %}
 
 {% block extraheader %}
-{% uniform_header %}
+{% include "form_includes.html" %}
 {% endblock %}
 
 {% block breadcrumbs %}
@@ -17,6 +16,7 @@
 <p>Giv os din email, og vi vil sende dig et nyt kodeord.</p>
 
 <form method="post" action="" class="uniForm">
+{% csrf_token %}
 
 <fieldset class="inlineLabels">
 <legend>Send nyt kodeord</legend>
