@@ -1,10 +1,10 @@
 {% extends "site.html" %}
 {% load i18n %}
 
-{% load uniform %}
+{% load uni_form_tags %}
 
 {% block extraheader %}
-{% uniform_header %}
+{% include "form_includes.html" %}
 {% endblock %}
 
 {% block breadcrumbs %}<div class="breadcrumbs"><a href="../">{% trans 'Home' %}</a> &rsaquo; {% trans 'Password reset confirmation' %}</div>{% endblock %}
@@ -17,7 +17,9 @@
 
 <p>Indtast venligst dit nye kodeord</p>
 
-{{form|uniform:"Sæt nyt kodeord"}}
+{% with form.helper as helper %}
+    {% uni_form form helper %}
+{% endwith %}
 
 {% else %}
 
