@@ -2,6 +2,7 @@
  * Support for Django 1.2
  * Removed tiny-mce editor support (resulting HTML were a mess)
  * Bundled south 0.7 with install (no need to install on new installations)
+ * Now using django-uni-form for form rendering
 
 3.0.0
  * Improved support for additional languages.
